--- a/Text_Preprocessing.ipynb
+++ b/Text_Preprocessing.ipynb
@@ -538,6 +538,33 @@
    "source": [
     "lem_data[0]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#saving them with pickle\n",
+    "\n",
+    "pickle.dump(stem_data, open( \"stemmed_data.p\", \"wb\" ) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle.dump(lem_data, open( \"lemmatized_data.p\", \"wb\" ) )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Two new files were created to save the lemmatized data and the stemmed data.  Saving them with pickle allows for reuse of such data in other notebooks and spares the time of having to run preprocessing steps again."
+   ]
   }
  ],
  "metadata": {
